k8s-monitoring/prom.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    env: dev
  name: prometheus
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    env: dev
  name: prometheus
  namespace: prometheus
spec:
  ports:
  - name: prometheus
    port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus
    env: dev
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prometheus
    env: dev
  name: prometheus
  namespace: prometheus
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: prometheus
      env: dev
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: prometheus
        env: dev
    spec:
      containers:
      - env:
        - name: TZ
          value: America/Sao_Paulo
        image: prom/prometheus
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /-/healthy
            port: 9090
            scheme: HTTP
          initialDelaySeconds: 25
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        name: prometheus
        ports:
        - containerPort: 9090
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /-/ready
            port: 9090
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 3
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
          requests:
            cpu: 50m
            memory: 100Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: gke-lb-ext-leosete-prometheus
    networking.gke.io/managed-certificates: prometheus-certs
  labels:
    app: prometheus
    env: dev
  name: prometheus-ext
  namespace: prometheus
spec:
  rules:
  - host: prometheus.desafioleosete.com
    http:
      paths:
      - backend:
          service:
            name: prometheus
            port:
              number: 80
        path: /
        pathType: Prefix
